overlays/kimawesome/infrastructure/observability/grafana-operator/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
spec:
  parentRefs:
    - name: https-gateway
      namespace: kube-system
      sectionName: https-grafana
  hostnames:
    - "grafana.kim.tec.br"       # Specific hostname for this app
  rules:
    - name: root
      matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana-service
          port: 3000
